PR-10 feat: adding foundations section and implementing delete item buttons
